created: workshops section; added: workshops images; edited: css redaction

--- a/index.html
+++ b/index.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
 <html lang="es">
-  <meta
-    name="description"
-    content="Información sobre Tercer Espacio, un espacio cultural con salas disponibles para ensayos artisticos y eventos."
-  />
-  <meta
-    name="keywords"
-    content="Tercer Espacio, teatro, Córdoba, ensayos, eventos, arte"
-  />
   <head>
+    <meta
+      name="description"
+      content="Información sobre Tercer Espacio, un espacio cultural con salas disponibles para ensayos artisticos y eventos."
+    />
+    <meta
+      name="keywords"
+      content="Tercer Espacio, teatro, Córdoba, ensayos, eventos, arte"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tercer Espacio - Links</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="assets/favicon/favicon-16x16.png"
+    />
   </head>
   <body>
     <div class="container">
@@ -31,28 +44,34 @@
       </div>
       <h3>Documentos útiles</h3>
       <div class="links">
+        <a href="talleres/index.html"> Info - Talleres</a>
         <a
           href="https://drive.google.com/file/d/1q9fUAtGcjSjz7gNuPGuWBpeu7rSgCCp8/view"
-          >Info - ¿Cómo trabajamos?</a
+        >
+          Info - ¿Cómo trabajamos?</a
         >
         <a
           href="https://drive.google.com/file/d/1rr7gzHakELS6Se6ycWI_bu9gW1nGNzhf/view"
-          >Fotos y dimensiones del espacio</a
+        >
+          Fotos y dimensiones del espacio</a
         >
       </div>
       <h3>Disponibilidad Horaria</h3>
       <div class="links">
         <a
           href="https://calendar.google.com/calendar/u/0/embed?src=b7a7474467d8e895fb0c81f2f06364042414f6e77dc61fe0ac953aa301646abd@group.calendar.google.com&ctz=America/Argentina/Cordoba&mode=WEEK&showTabs=0&showPrint=0&showCalendars=0"
-          >Espacio 1 - Sala Grande</a
+        >
+          Espacio 1 - Sala Grande</a
         >
         <a
           href="https://calendar.google.com/calendar/u/0/embed?src=6065e8314c3718940df592ce869a443b63cd838f4177115fadce6a9d4e698e03@group.calendar.google.com&ctz=America/Argentina/Cordoba&mode=WEEK&showTabs=0&showPrint=0&showCalendars=0"
-          >Espacio 2 - Sala Mediana</a
+        >
+          Espacio 2 - Sala Mediana</a
         >
         <a
           href="https://calendar.google.com/calendar/u/0/embed?src=9b4a23e225127065a73f046a10e2e166cab166d12ada27ee4c3adb7f2263b383@group.calendar.google.com&ctz=America/Argentina/Cordoba&mode=WEEK&showTabs=0&showPrint=0&showCalendars=0"
-          >Espacio 3 - Sala Chica</a
+        >
+          Espacio 3 - Sala Chica</a
         >
       </div>
       <h3>Hacé tu reserva</h3>
@@ -60,6 +79,8 @@
         <a
           href="https://wa.me/+5493518119701?text=Hola!%20Me%20gustar%C3%ADa%20consultarles%20por%20"
           id="wpp-btn"
+          target="_blank"
+          rel="noopener noreferrer"
           >Whatsapp</a
         >
       </div>
