fixed: navbar redirect; added: some -more info- links

--- a/talleres/index.html
+++ b/talleres/index.html
@@ -33,9 +33,8 @@
   </head>
   <body>
     <div class="navbar">
-      <a href="/" class="back">◄</a>
-      <span class="brand-name" style="font-size: 22px">Tercer Espacio</span>
-      <span></span>
+      <a href="https://franheredia.github.io/tercer-espacio-linktree/" class="nav-back">◄</a>
+      <span class="brand-name nav-title">Tercer Espacio</span>
     </div>
     <div class="container navbar-margin">
       <p>Información sobre los talleres disponibles en el espacio ✨</p>
@@ -175,11 +174,10 @@
         </p>
         <div class="workshop-buttons">
           <a
-            href="taller1.pdf"
+            href="https://drive.google.com/file/d/1DC1typSi4WJbvGaRTKWo6GiCEWqpNYlR/view?usp=sharing"
             target="_blank"
             rel="“noopener"
             noreferrer”
-            style="visibility: hidden"
             >Más info</a
           >
           <a
