added: horarios page edited: espacio 3 naming

--- a/index.html
+++ b/index.html
@@ -81,19 +81,19 @@
       <h3>Disponibilidad Horaria</h3>
       <div class="links">
         <a
-          href="https://calendar.google.com/calendar/u/0/embed?src=b7a7474467d8e895fb0c81f2f06364042414f6e77dc61fe0ac953aa301646abd@group.calendar.google.com&ctz=America/Argentina/Cordoba&mode=WEEK&showTabs=0&showPrint=0&showCalendars=0"
+          href="horarios/espacio-1.html"
         >
           Espacio 1 - Sala Grande</a
         >
         <a
-          href="https://calendar.google.com/calendar/u/0/embed?src=6065e8314c3718940df592ce869a443b63cd838f4177115fadce6a9d4e698e03@group.calendar.google.com&ctz=America/Argentina/Cordoba&mode=WEEK&showTabs=0&showPrint=0&showCalendars=0"
+        href="horarios/espacio-2.html"
         >
           Espacio 2 - Sala Mediana</a
         >
         <a
-          href="https://calendar.google.com/calendar/u/0/embed?src=9b4a23e225127065a73f046a10e2e166cab166d12ada27ee4c3adb7f2263b383@group.calendar.google.com&ctz=America/Argentina/Cordoba&mode=WEEK&showTabs=0&showPrint=0&showCalendars=0"
+        href="horarios/espacio-3.html"
         >
-          Espacio 3 - Sala Chica</a
+          Espacio 3 - Sala de música</a
         >
       </div>
       <h3>Hacé tu reserva</h3>
@@ -106,6 +106,7 @@
           >Whatsapp</a
         >
       </div>
+      <p>Nuestro alias: TERCER.ESPACIO</p>
     </div>
   </body>
 </html>
