edit: minor wording changes

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
       </div>
       <h3>Documentos útiles</h3>
       <div class="links">
-        <a href="talleres/index.html"> Info - Talleres</a>
+        <a href="talleres/index.html"> Info de nuestros Talleres</a>
         <a
           href="https://drive.google.com/file/d/1q9fUAtGcjSjz7gNuPGuWBpeu7rSgCCp8/view"
         >
-          Info - ¿Cómo trabajamos?</a
+          ¿Cómo trabajamos?</a
         >
         <a
           href="https://drive.google.com/file/d/1rr7gzHakELS6Se6ycWI_bu9gW1nGNzhf/view"
@@ -93,7 +93,7 @@
         <a
         href="horarios/espacio-3.html"
         >
-          Espacio 3 - Sala de música</a
+          Espacio 3 - Sala de Música</a
         >
       </div>
       <h3>Hacé tu reserva</h3>
