edited: horarios > fixed CTA button

--- a/horarios/espacio-1.html
+++ b/horarios/espacio-1.html
@@ -40,9 +40,13 @@
       >
       <span class="brand-name nav-title">Tercer Espacio</span>
     </div>
-    <div class="container navbar-margin">
-      <h1 style="font-size: 1em;">Disponibilidad horaria del Espacio 1</h1>
-      <p>Acá podés revisar los horarios disponibles de la <b>sala grande</b>. Presioná el botón debajo del calendario para comunicarte con nosotrxs y hacer tu reserva ♥️.</p>
+    <div class="container navbar-margin" style="margin-bottom: 12px">
+      <h1 style="font-size: 1em">Disponibilidad horaria del Espacio 1</h1>
+      <p>
+        Acá podés revisar los horarios disponibles de la <b>sala grande</b>.
+        Presioná el botón flotante para comunicarte con nosotrxs y hacer tu
+        reserva ♥️.
+      </p>
       <iframe
         src="https://calendar.google.com/calendar/embed?height=600&wkst=2&ctz=America%2FArgentina%2FCordoba&showPrint=0&showTitle=0&showCalendars=0&mode=WEEK&showTz=0&src=YjdhNzQ3NDQ2N2Q4ZTg5NWZiMGM4MWYyZjA2MzY0MDQyNDE0ZjZlNzdkYzYxZmUwYWM5NTNhYTMwMTY0NmFiZEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%239266FF"
         width="100%"
@@ -50,11 +54,14 @@
         frameborder="0"
         scrolling="no"
       ></iframe>
+    </div>
+    <div class="floating-btn-container">
       <div class="links">
         <a
           href="https://wa.me/+5493518119701?text=Hola%21%20Me%20gustar%C3%ADa%20hacer%20reservar%20un%20horario%20en%20el%20ESPACIO%201"
           target="_blank"
           rel="noopener noreferrer"
+          class="box-shadow"
           >Hacé tu reserva</a
         >
       </div>
