--- a/horarios/espacio-3.html
+++ b/horarios/espacio-3.html
@@ -41,20 +41,29 @@
       <span class="brand-name nav-title">Tercer Espacio</span>
     </div>
     <div class="container navbar-margin">
-      <h1 style="font-size: 1em;">Disponibilidad horaria del Espacio 3</h1>
-      <p>Acá podés revisar los horarios disponibles de la <b>sala de música</b>. Presioná el botón debajo del calendario para comunicarte con nosotrxs y hacer tu reserva ♥️.</p>
+      <h1 style="font-size: 1em">Disponibilidad horaria del Espacio 3</h1>
+      <p>
+        Acá podés revisar los horarios disponibles de la <b>sala de música</b>.
+        Presioná el botón debajo del calendario para comunicarte con nosotrxs y
+        hacer tu reserva ♥️.
+      </p>
       <iframe
-      src="https://calendar.google.com/calendar/embed?height=600&wkst=2&ctz=America%2FArgentina%2FCordoba&showPrint=0&showTitle=0&showCalendars=0&mode=WEEK&showTz=0&src=OWI0YTIzZTIyNTEyNzA2NWE3M2YwNDZhMTBlMmUxNjZjYWIxNjZkMTJhZGEyN2VlNGMzYWRiN2YyMjYzYjM4M0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%2342CCC8"      style="border-width:0"
-      width="100%"
-      height="600"
-      frameborder="0"
-      scrolling="no">
+        src="https://calendar.google.com/calendar/embed?height=600&wkst=2&ctz=America%2FArgentina%2FCordoba&showPrint=0&showTitle=0&showCalendars=0&mode=WEEK&showTz=0&src=OWI0YTIzZTIyNTEyNzA2NWE3M2YwNDZhMTBlMmUxNjZjYWIxNjZkMTJhZGEyN2VlNGMzYWRiN2YyMjYzYjM4M0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%2342CCC8"
+        style="border-width: 0"
+        width="100%"
+        height="600"
+        frameborder="0"
+        scrolling="no"
+      >
       </iframe>
+    </div>
+    <div class="floating-btn-container">
       <div class="links">
         <a
-          href="https://wa.me/+5493518119701?text=Hola%21%20Me%20gustar%C3%ADa%20hacer%20reservar%20un%20horario%20en%20el%20ESPACIO%203"
+          href="https://wa.me/+5493518119701?text=Hola%21%20Me%20gustar%C3%ADa%20hacer%20reservar%20un%20horario%20en%20el%20ESPACIO%201"
           target="_blank"
           rel="noopener noreferrer"
+          class="box-shadow"
           >Hacé tu reserva</a
         >
       </div>
