fixed: horarios > buttons position fixed: horarios > wpp wording typo

--- a/horarios/espacio-1.html
+++ b/horarios/espacio-1.html
@@ -55,16 +55,14 @@
         scrolling="no"
       ></iframe>
     </div>
-    <div class="floating-btn-container">
-      <div class="links">
-        <a
-          href="https://wa.me/+5493518119701?text=Hola%21%20Me%20gustar%C3%ADa%20hacer%20reservar%20un%20horario%20en%20el%20ESPACIO%201"
-          target="_blank"
-          rel="noopener noreferrer"
-          class="box-shadow"
-          >Hacé tu reserva</a
-        >
-      </div>
+    <div class="links floating-btn">
+      <a
+        href="https://wa.me/+5493518119701?text=Hola%21%20Me%20gustar%C3%ADa%20reservar%20un%20horario%20en%20el%20ESPACIO%201"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="box-shadow"
+        >Hacé tu reserva</a
+      >
     </div>
   </body>
 </html>
