--- a/horarios/espacio-2.html
+++ b/horarios/espacio-2.html
@@ -55,16 +55,14 @@
         scrolling="no"
       ></iframe>
     </div>
-    <div class="floating-btn-container">
-      <div class="links">
+      <div class="links floating-btn">
         <a
-          href="https://wa.me/+5493518119701?text=Hola%21%20Me%20gustar%C3%ADa%20hacer%20reservar%20un%20horario%20en%20el%20ESPACIO%201"
+          href="https://wa.me/+5493518119701?text=Hola%21%20Me%20gustar%C3%ADa%20reservar%20un%20horario%20en%20el%20ESPACIO%202"
           target="_blank"
           rel="noopener noreferrer"
           class="box-shadow"
           >Hacé tu reserva</a
         >
-      </div>
     </div>
   </body>
 </html>
