edited: minor wordings changes removed: profile-picture margin

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
           </a>
         </div>
       </div>
-      <h3>Documentos útiles</h3>
+      <h3>Información General</h3>
       <div class="links">
-        <a href="talleres/index.html"> Info de nuestros Talleres</a>
+        <a href="talleres/index.html"> Talleres en Curso</a>
         <a
           href="https://drive.google.com/file/d/1q9fUAtGcjSjz7gNuPGuWBpeu7rSgCCp8/view"
         >
