edited: meta description

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta
       name="description"
-      content="Información sobre Tercer Espacio, un espacio cultural con salas disponibles para ensayos artisticos y eventos."
+      content="Links útiles de Tercer Espacio, un espacio cultural con salas disponibles para ensayos artisticos y eventos."
     />
     <meta
       name="keywords"
