added: landing page > adress

--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
           >Whatsapp</a
         >
       </div>
-      <p>Nuestro alias: TERCER.ESPACIO</p>
+      <p>Dirección: Humberto Primo 836 - Córdoba, Argentina</p>
+      <p>Alias: TERCER.ESPACIO</p>
     </div>
   </body>
 </html>
