--- a/horarios/espacio-2.html
+++ b/horarios/espacio-2.html
@@ -34,7 +34,7 @@
   <body>
     <div class="navbar">
       <a
-        href="https://franheredia.github.io/tercer-espacio-linktree/"
+        href="https://tercerespacio.com.ar/"
         class="nav-back"
         >◄</a
       >
