edited: workshops page now works with a json added: guitarra, violin and danza workshops

--- a/talleres/index.html
+++ b/talleres/index.html
@@ -31,6 +31,7 @@
       href="../assets/favicon/favicon-16x16.png"
     />
   </head>
+  <script src="talleres.js"></script> 
   <body>
     <div class="navbar">
       <a
@@ -40,249 +41,9 @@
       >
       <span class="brand-name nav-title">Tercer Espacio</span>
     </div>
-    <div class="container navbar-margin">
+    <div class="container navbar-margin" id="workshops-container">
       <p>Información sobre los talleres disponibles en el espacio ✨</p>
-
-      <div class="workshop-card">
-        <img
-          src="../assets/workshops/actuacion.png"
-          class="workshop-img"
-          alt="Imagen para el taller de actuación"
-        />
-        <h2>Actuación</h2>
-        <p>
-          Taller de actuación centrado en la libertad creativa y el
-          autoconocimiento a través de juegos teatrales, explorando la técnica
-          actoral, el vínculo con el entorno y con el espectador.
-        </p>
-        <div class="workshop-buttons">
-          <a
-            href="https://www.instagram.com/p/DGRdwTQxJQi/"
-            target="_blank"
-            rel="noopener noreferrer"
-            >Más info</a
-          >
-          <a
-            title="Chatear con la persona encargada por WhatsApp"
-            href="https://wa.me/5492664560119?text=Hola%21%20Me%20interesa%20el%20taller%20de%20Actuaci%C3%B3n%20que%20dan%20en%20Tercer%20Espacio"
-            target="_blank"
-            rel="noopener noreferrer"
-            class="wpp-btn"
-            >WhatsApp</a
-          >
-        </div>
-      </div>
-
-      <div class="workshop-card">
-        <img
-          src="../assets/workshops/canto-autoconfianza.png"
-          class="workshop-img"
-          alt="Imagen para el taller de canto y autoconfianza"
-        />
-        <h2>Canto y Autoconfianza</h2>
-        <p>
-          En este proyecto, el objetivo principal es crear un ambiente de
-          confianza y libertad donde los alumnos puedan explorar, fortalecer y
-          expandir su potencial vocal sin sentirse limitados.
-        </p>
-        <div class="workshop-buttons">
-          <a
-            href="https://drive.google.com/file/d/1DC1typSi4WJbvGaRTKWo6GiCEWqpNYlR/view?usp=sharing"
-            target="_blank"
-            rel="noopener noreferrer"
-            style="visibility: hidden"
-            >Más info</a
-          >
-          <a
-            title="Chatear con la persona encargada por WhatsApp"
-            href="https://wa.me/5493583403712?text=Hola%21%20Me%20interesa%20el%20taller%20de%20Canto%20y%20Autoconfianza%20que%20dan%20en%20Tercer%20Espacio"
-            target="_blank"
-            rel="noopener noreferrer"
-            class="wpp-btn"
-            >WhatsApp</a
-          >
-        </div>
-      </div>
-
-      <div class="workshop-card">
-        <img
-          src="../assets/workshops/canto-grupal.png"
-          class="workshop-img"
-          alt="Imagen para el taller de canto grupal"
-        />
-        <h2>Canto Grupal</h2>
-        <p>
-          Este taller busca acercar la experiencia del canto a personas que
-          quieran iniciarse en esta actividad de manera grupal, explorando la
-          voz desde de manera lúdica y creativa.
-        </p>
-        <div class="workshop-buttons">
-          <a
-            href="https://www.instagram.com/p/DGUETEAxXP8/"
-            target="_blank"
-            rel="noopener noreferrer"
-            >Más info</a
-          >
-          <a
-            title="Chatear con la persona encargada por WhatsApp"
-            href="https://wa.me/5493512106403?text=Hola%21%20Me%20interesa%20el%20taller%20de%20Canto%20Grupal%20que%20dan%20en%20Tercer%20Espacio"
-            target="_blank"
-            rel="noopener noreferrer"
-            class="wpp-btn"
-            >WhatsApp</a
-          >
-        </div>
-      </div>
-
-      <div class="workshop-card">
-        <img
-          src="../assets/workshops/comicidad.png"
-          class="workshop-img"
-          alt="Imagen para el taller de comicidad y teatro físico"
-        />
-        <h2>Comicidad y Teatro Físico</h2>
-        <p>
-          Activar la escena desde el humor, lo gestual y el juego. Entrenar para
-          activar la chispa que nos mueve. Un espacio para dejar fluir lo
-          ridículo y reír en conjunto.
-        </p>
-        <div class="workshop-buttons">
-          <a
-            href="https://drive.google.com/file/d/1DC1typSi4WJbvGaRTKWo6GiCEWqpNYlR/view?usp=sharing"
-            target="_blank"
-            rel="noopener noreferrer"
-            >Más info</a
-          >
-          <a
-            title="Chatear con la persona encargada por WhatsApp"
-            href="https://wa.me/5493513167259?text=Hola%21%20Me%20interesa%20el%20taller%20de%20Comicidad%20y%20Teatro%20F%C3%ADsico%20que%20dan%20en%20Tercer%20Espacio"
-            target="_blank"
-            rel="noopener noreferrer"
-            class="wpp-btn"
-            >WhatsApp</a
-          >
-        </div>
-      </div>
-
-      <div class="workshop-card">
-        <img
-          src="../assets/workshops/kike.png"
-          class="workshop-img"
-          alt="Imagen para el taller de formación actoral"
-        />
-        <h2>Formación Actoral</h2>
-        <p>
-          Kike Giungi brinda una propuesta de trabajo creativo en un ambiente
-          seguro y comprometido, integrando herramientas actorales con prácticas
-          escénicas y material teórico.
-        </p>
-        <div class="workshop-buttons">
-          <a
-            href=""
-            target="_blank"
-            rel="noopener noreferrer"
-            style="visibility: hidden"
-            >Más info</a
-          >
-          <a
-            title="Chatear con la persona encargada por WhatsApp"
-            href="https://wa.me/5493516147287?text=Hola%21%20Me%20interesa%20el%20taller%20de%20Formaci%C3%B3n%20Actoral%20que%20dan%20en%20Tercer%20Espacio"
-            target="_blank"
-            rel="noopener noreferrer"
-            class="wpp-btn"
-            >WhatsApp</a
-          >
-        </div>
-      </div>
-
-      <div class="workshop-card">
-        <img
-          src="../assets/workshops/impro.png"
-          class="workshop-img"
-          alt="Imagen para el taller de impro teatral"
-        />
-        <h2>Impro Teatral</h2>
-        <p>
-          Este taller explorará cómo el silencio, la pausa y el espacio en
-          blanco pueden ser las más poderosas herramientas de creación escénica.
-        </p>
-        <div class="workshop-buttons">
-          <a
-            href=""
-            target="_blank"
-            rel="noopener noreferrer"
-            style="visibility: hidden"
-            >Más info</a
-          >
-          <a
-            title="Chatear con la persona encargada por WhatsApp"
-            href="https://wa.me/5493517391987?text=Hola%21%20Me%20interesa%20el%20taller%20de%20Impro%20Teatral%20que%20dan%20en%20Tercer%20Espacio"
-            target="_blank"
-            rel="noopener noreferrer"
-            class="wpp-btn"
-            >WhatsApp</a
-          >
-        </div>
-      </div>
-
-      <div class="workshop-card">
-        <img
-          src="../assets/workshops/piano.png"
-          class="workshop-img"
-          alt="Imagen para el taller de piano creativo"
-        />
-        <h2>Piano Creativo</h2>
-        <p>
-          Abarcaremos diferentes formas de interpretar canciones ajenas y
-          propias, experimentaremos diferentes sensaciones y expresiones de
-          música.
-        </p>
-        <div class="workshop-buttons">
-          <a
-            href="https://www.instagram.com/share/BAIhOOwFrc"
-            target="_blank"
-            rel="noopener noreferrer"
-            >Más info</a
-          >
-          <a
-            title="Chatear con la persona encargada por WhatsApp"
-            href="https://wa.me/5493543314343?text=Hola%21%20Me%20interesa%20el%20taller%20de%20Piano%20Creativo%20que%20dan%20en%20Tercer%20Espacio"
-            target="_blank"
-            rel="noopener noreferrer"
-            class="wpp-btn"
-            >WhatsApp</a
-          >
-        </div>
-      </div>
-
-      <div class="workshop-card">
-        <img
-          src="../assets/workshops/yoga.png"
-          class="workshop-img"
-          alt="Imagen para el taller de yoga grupal"
-        />
-        <h2>Yoga Grupal</h2>
-        <p>
-          A través de posturas y técnicas de respiración consciente, conectá con
-          tu cuerpo y mente de manera única y personal.
-        </p>
-        <div class="workshop-buttons">
-          <a
-            href="taller1.pdf"
-            target="_blank"
-            rel="noopener noreferrer"
-            style="visibility: hidden"
-            >Más info</a
-          >
-          <a
-            title="Chatear con la persona encargada por WhatsApp"
-            href="https://wa.me/5493516992321?text=Hola%21%20Me%20interesa%20el%20taller%20de%20Yoga%20Grupal%20que%20dan%20en%20Tercer%20Espacio"
-            target="_blank"
-            rel="noopener noreferrer"
-            class="wpp-btn"
-            >WhatsApp</a
-          >
-        </div>
+      <!-- Esto se llena con el script de ./talleres.js -->
       </div>
     </div>
   </body>
