added: Useful tools buttons

--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@
         <a href="horarios/espacio-2.html"> Espacio 2 - Sala Mediana</a>
         <a href="horarios/espacio-3.html"> Espacio 3 - Sala de Música</a>
       </div>
+      <h3>Herramientas útiles para la comunidad cultural</h3>
+      <div class="links">
+        <a href="https://www.when2meet.com/" target="_blank" class="secondary-content-button" rel="noopener noreferrer"> Wheen2meet - Encontrar coincidencias de horario</a>
+        <a href="https://www.trello.com/" target="_blank" class="secondary-content-button" rel="noopener noreferrer"> Trello - Gestionar proyecto y tareas</a>
+        <a href="https://www.splitwise.com/" target="_blank" class="secondary-content-button" rel="noopener noreferrer"> Splitwise - Gestionar gastos en común</a>
+      </div>
       <h3>Hacé tu reserva</h3>
       <div class="links">
         <a
