--- a/index.html
+++ b/index.html
@@ -100,9 +100,10 @@
       </div>
       <h3>Herramientas útiles para la comunidad cultural</h3>
       <div class="links">
-        <a href="https://www.when2meet.com/" target="_blank" class="secondary-content-button" rel="noopener noreferrer"> Wheen2meet - Encontrar coincidencias de horario</a>
-        <a href="https://www.trello.com/" target="_blank" class="secondary-content-button" rel="noopener noreferrer"> Trello - Gestionar proyecto y tareas</a>
-        <a href="https://www.splitwise.com/" target="_blank" class="secondary-content-button" rel="noopener noreferrer"> Splitwise - Gestionar gastos en común</a>
+        <a href="https://schej.it/" target="_blank" class="secondary-content-button" rel="noopener noreferrer"> Schejit - Coincidir un horario</a>
+        <a href="https://www.when2meet.com/" target="_blank" class="secondary-content-button" rel="noopener noreferrer"> When2meet - Coincidir un horario</a>
+        <a href="https://www.trello.com/" target="_blank" class="secondary-content-button" rel="noopener noreferrer"> Trello - Gestionar proyecto/tareas</a>
+        <a href="https://www.splitwise.com/" target="_blank" class="secondary-content-button" rel="noopener noreferrer"> Splitwise - Gestionar gastos comunes</a>
       </div>
       <h3>Hacé tu reserva</h3>
       <div class="links">
