--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
       </div>
       <h3>Herramientas útiles para la comunidad cultural</h3>
       <div class="links">
+        <a href="castings/index.html" class="secondary-content-button"> Castings abiertos</a>
         <a href="https://schej.it/" target="_blank" class="secondary-content-button" rel="noopener noreferrer"> Schejit - Coincidir un horario</a>
         <a href="https://www.when2meet.com/" target="_blank" class="secondary-content-button" rel="noopener noreferrer"> When2meet - Coincidir un horario</a>
         <a href="https://www.trello.com/" target="_blank" class="secondary-content-button" rel="noopener noreferrer"> Trello - Gestionar proyecto/tareas</a>
