edited: castings and talleres content metadata

--- a/castings/index.html
+++ b/castings/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="Información sobre Tercer Espacio, un espacio cultural con salas disponibles para ensayos artisticos y eventos." />
-  <meta name="keywords" content="Tercer Espacio, teatro, Córdoba, ensayos, eventos, arte" />
+    content="Lista de castings activos en la ciudad de Córdoba Capital." />
+  <meta name="keywords" content="Tercer Espacio, castings, Córdoba, actuación, remunerado, arte" />
   <title>Tercer Espacio - Castings</title>
   <link rel="stylesheet" href="../styles.css" />
   <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon/apple-touch-icon.png" />
