--- a/talleres/index.html
+++ b/talleres/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Información sobre Tercer Espacio, un espacio cultural con salas disponibles para ensayos artisticos y eventos."
+      content="Talleres disponibles en Tercer Espacio, acceso a la comunicación con cada docente."
     />
     <meta
       name="keywords"
